tests/ui/consts/trait_alias.pass.stderr
error[E0277]: the trait bound `(): const Foo` is not satisfied
  --> $DIR/trait_alias.rs:28:19
   |
LL | const _: () = foo(&());
   |               --- ^^^
   |               |
   |               required by a bound introduced by this call
   |
note: required by a bound in `foo`
  --> $DIR/trait_alias.rs:19:17
   |
LL | const fn foo<T: [const] Foo>(x: &T) {
   |                 ^^^^^^^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
